# pop-scraper

./: .gitignore  Makefile  README.md  pop-labels.csv  pyproject.toml  scrapinghub.yml  scrapy.cfg
exploration/: curl.sh  error_response.py  item.json  memoire_fields.csv  merimee_item.json  query.json  response.json
exports/: lib.py  split_csv_by_dpt.py
notebooks/: exports.ipynb  palissy-columns.ipynb  palissy.ipynb
pop_scraper/: items.py  items_merimee.csv  middlewares.py  pipelines.py  pop_api.py  request_builder.py  settings.py
pop_scraper/spiders/: pop_api.py
